--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,33 @@
-.DS_Store
-node_modules
-/dist
+# Dependency directories
+node_modules/
 
+# NPM cache directory
+.npm/
 
-# local env files
-.env.local
-.env.*.local
+# Distribution
+dist/
 
-# Log files
+# Test coverage reports
+coverage/
+
+# Local development utility directory
+local/
+
+# Logs
+logs
+*.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# IDEs
+
+## IntelliJ IDEA project directory
+.idea/
+
+## Visual Studio Code / local history plugin
+.history/
+
+## GitLab pages firectory
+public/
+
+## Local .npmrc
+.npmrc
